tests/test_assets/semantic/invalid/switch/evaluated_duplicate_case.cog
test_duplicate_evaluated::(value: u8) -> void {
    switch value {
        case 3: {}
        case 1 + 2: {}
        default: {}
    }
}
