tests/test_assets/semantic/invalid/switch/evaluated_duplicate_case.expected
semantic error at line 4: duplicate switch case
1 semantic error generated.
